data/all_generated_tests/raw_wast_tests/br_table_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2542.wast
;; 1. **Index Out of Bounds with Imported Function Call**:     - Test Description: Create a module that imports a function. Inside a block, use `br_table` with an index larger than the length of the label vector, effectively causing it to branch to the default label, which is an exported function call. Check if the control flow correctly transitions across the module boundary without stack corruption.    - Constraint: Validates that out-of-bounds index handling in `br_table` correctly uses the default target when transitioning between imported and local contexts without stack misalignment.    - Differential Reasoning: Incorrect index handling could lead to improper branching behavior in `wizard_engine`.

(assert_invalid
  (module
    (import "env" "imported_func" (func $imported_func (param i32)))
    (export "exported_func" (func $exported_func))
    (func $exported_func
      (br_table 0 1 (i32.const 2)) ;; Referencing an out-of-bounds index.
    )
  )
  "unknown label"
)